# gitfiend-core

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml  tauri.conf.json
.cargo/: config.toml
app/: package-lock.json  package.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: app_requests.rs  handle_request.rs  main.rs
bindings/: ACType.ts  ActionError.ts  ActionOptions.ts  ActionOutput.ts  ActionProgress.ts  ActionState.ts  BlankLine.ts  BranchState.ts  CFLine.ts  CFSection.ts  CFSectionLine.ts  CFSide.ts  CloneOptions.ts  CodeSearchOpts.ts  CommandOptions.ts  CommandsOptions.ts  Commit.ts  CommitAncestorOpts.ts  CommitDiffOpts.ts  CommitFilter.ts  CommitInfo.ts  CommitOnBranchOpts.ts  CommitPoint.ts  CommitsOnBranchOpts.ts  CommonBranchesReq.ts  ConfigValueOptions.ts  ConflictLine.ts  ConflictedFile.ts  ConflictedFileLine.ts  ConflictedLine.ts  ConflictedSection.ts  ConflictedSide.ts  CoreSearchResult.ts  Credentials.ts  DataStoreValues.ts  DateResult.ts  ES.ts  FileMatch.ts  GitAddOptions.ts  GitConfig.ts  (+57 more)
core-lib/: Cargo.toml
core_lib/: Cargo.toml
core_lib/bindings/: ACType.ts  ActionError.ts  ActionOptions.ts  ActionState.ts  BlankLine.ts  CFLine.ts  CFSection.ts  CFSectionLine.ts  CloneOptions.ts  CodeSearchOpts.ts  CommandOptions.ts  CommandsOptions.ts  Commit.ts  CommitAncestorOpts.ts  CommitDiffOpts.ts  CommitInfo.ts  CommitOnBranchOpts.ts  CommitsOnBranchOpts.ts  ConflictLine.ts  ConflictedFile.ts  CoreSearchResult.ts  Credentials.ts  DataStoreValues.ts  DateResult.ts  ES.ts  FileMatch.ts  GitAddOptions.ts  GitConfig.ts  GitVersion.ts  Hunk.ts  HunkLine.ts  HunkLineStatus.ts  HunkRange.ts  LoadConflictOptions.ts  LocalRefCommitDiff.ts  MessageAC.ts  OkLine.ts  Patch.ts  PollOptions.ts  PollSearchOpts.ts  (+29 more)
core_lib/src/: core_request.rs  handle_request.rs  lib.rs
loggers/: Cargo.toml
loggers/src/: lib.rs
server/: Cargo.toml
server/bindings/: WriteFileOpts.ts
server/src/: main.rs
src/: config.rs  handle_request.rs  input.rs  main.rs  parser.rs  parser_types.rs
src/git/: action_state.rs  git_settings.rs  git_types.rs  git_types_extra_impl.rs  git_version.rs  mod.rs  repo_watcher.rs  run_git.rs  run_git_action.rs  store.rs  store_2.rs
src/index/: ac_index.rs  auto_complete.rs  commit_message_ac.rs  create_branch_ac.rs  mod.rs
src/parser/: input.rs  mod.rs  parser.rs  parser_types.rs  standard_parsers.rs
src/server/: async_server.rs  git_request.rs  http.rs  mod.rs  request_util.rs  requests.rs  server.rs  static_files.rs
src/ui/: mod.rs  toolbar.rs  window.rs
src/util/: data_store.rs  debug_print.rs  global.rs  global2.rs  mod.rs  short_cache.rs
(+154 files in other folders)
