[package]
name = "gitfiend-core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
ts-rs = "9.0.1"
directories = "5.0.1"
similar = "2.6.0"
rayon = "1.10.0"
ahash = "0.8.11"
once_cell = "1.19.0"
mime_guess = "2.0.5"
loggers = {path = "./loggers"}
notify = "6.1.1"
syntect = "5.2.0"
chardetng = "0.1.17"
encoding_rs = "0.8.34"
fix-path-env = {git = "https://github.com/tauri-apps/fix-path-env-rs"}

[profile.dev]
#opt-level = 1
#incremental = false

[profile.release]
#debug = true
strip = true
lto = true
codegen-units = 1

# Set the default for dependencies.
[profile.dev.package."*"]
#opt-level = 3

#[lints]
#redundant_closure_call = true