[package]
name = "gitfiend-core"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "10"
directories = "6.0"
similar = "2.7"
rayon = "1.10.0"
ahash = "0.8.11"
once_cell = "1.20.2"
mime_guess = "2.0.5"
loggers = { path = "./loggers" }
syntect = "5.2.0"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
iced = "0.13.1"

[profile.dev]
#opt-level = 1
#incremental = false

[profile.release]
#debug = true
strip = true
lto = true
codegen-units = 1

# Set the default for dependencies.
[profile.dev.package."*"]
#opt-level = 3

#[lints]
#redundant_closure_call = true